# MireldarBabayev

./: .coveragerc  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  backup.json  commitlint.config.js  docker-compose.yml  makefile  pyproject.toml  requirements.txt  start.sh  starter.sh  uwsgi.ini
.github/workflows/: ci.yml  conventional_commit.yml  deploy.yml  issue.yml  lint.yml  secure.yml  test.yml  type.yml
_development/: docker-compose.dev.yml  docker-compose.yml  requirements_dev.txt
app/: backup.json  requirements.txt
app/apps/appointment/: admin.py  apps.py  forms.py  urls.py  views.py
app/apps/blog/: admin.py  apps.py  signals.py  translation.py  urls.py  views.py  views.py.save
app/apps/core/: admin.py  forms.py  translation.py  urls.py  views.py
app/apps/seo/: admin.py  apps.py  translation.py
app/apps/service/: admin.py  apps.py  forms.py  signals.py  translation.py  urls.py  views.py
app/apps/user/: admin.py  forms.py  middleware.py  urls.py  views.py
app/config/: asgi.py  settings.py  settings.py.save  sitemaps.py  urls.py  wsgi.py
app/config/settings/: base.py  dev.py  prod.py
app/static/css/: style.css
app/templates/: base.html  custom_sitemap.xml  robots.txt
app/tests/factories/: __init__.py
app/utils/context_processors/: context.py
app/utils/errors/: custom_errors.py
app/utils/helpers/: client_ip.py  slugify.py  validate_file.py  validate_google_map.py  validate_phone.py  validate_social_media.py  validate_time.py  validate_user_form.py  validate_work_hours.py
app/utils/manager/: published_blog.py
app/utils/models/: base_model.py  base_seo_detail.py  base_seo_model.py  singleton.py
app/utils/serializers/: password_field.py
app/utils/tests/: base.py  seo.py
app/utils/validators/: validate_file.py  validate_google_map.py  validate_image.py  validate_phone.py  validate_png.py  validate_social_media.py  validate_time.py
apps/appointment/: views.py
apps/appointment/api/: serializers.py
apps/appointment/models/: appointment.py
apps/blog/: admin.py  apps.py  signals.py  urls.py  views.py4
apps/blog/models/: blog.py  category.py  tag.py
apps/core/: translation.py
apps/seo/: translation.py
apps/service/: signals.py  translation.py  urls.py  views.py
apps/user/: admin.py  forms.py  middleware.py  urls.py
config/: settings.py  urls.py
nginx/sites/: mireldar.com.conf
templates/: base.html
(+409 files in other folders)
