[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'
exclude = "(migrations|settings\\.py|__init__\\.py)"
skip-string-normalization = true  # Skip string normalization (to keep quotes as you wrote them)

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
force_grid_wrap = 0
skip = ["migrations", "env", "settings.py"]
known_django = "django"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
recursive = true
in-place = true
exclude = ["__init__.py", "settings.py", "migrations", "apps.py"]

[tool.autopep8]
max_line_length = 90
in-place = true
recursive = true
aggressive = 2
exclude = "__init__.py,settings.py,migrations,apps.py"

[tool.flake8]
max-line-length = 79
select = ["C", "E226", "F", "W", "B", "B9"]
exclude = [".git", "__pycache__", ".venv", "migrations", "__init__.py", "settings.py", "apps.py"]
ignore = ["E203", "E501", "W503", "C812", "E731", "F811"]
max-complexity = 5
max-cognitive-complexity = 5

[tool.bandit]
severity = "high"
confidence = "high"
skips = ["B311", "B404"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"